finished the page

--- a/support_chat.html
+++ b/support_chat.html
@@ -322,7 +322,7 @@
             </div>
         <!-- نهاية الشريط-->
         <!--بداية المربع الاول-->
-        <div class="flex bg-[#DFF2FA] py-[1%] px-[2.5%] mx-[2.5%] rounded-3xl gap-5 mt-12">
+        <div class="flex bg-[#DFF2FA] py-[1%] px-[2.5%] mx-[2%] rounded-3xl gap-5 mt-12">
             <img class="w-[92px] sm:w-[150px] " src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
             <div>
         <div class="flex justify-end gap-3 mt-3 font-[Inter]  ">
@@ -337,8 +337,333 @@
                 <h3 class="w-auto bg-green-200 text-center mt-16 rounded-lg text-[10px]">جارية</h3>
             </div> -->
         </div>
-        <!--نهاية المربع الاول-->
+        <!--بداية المربع الثاني-->
+        <section class=" border border-[#D2D2D2] rounded-3xl py-[1%] px-[2%] mx-[2.5%] mt-3.5 text-[10px] xl:text-base	md:text-sm	">
+            <div class="flex gap-2.5 mt-[15%]">
+                <img src="imges/Ellipse 77.svg" alt="">
+                <h3 class="border border-[#25A0D5] rounded-2xl p-[1%] ">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،</h3>
+            </div>
+            <div class="flex gap-2.5 mt-[2%] justify-end">
+                <h3 class="border border-[#25A0D5] rounded-2xl p-[1%] ">
+                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة،
+                </h3>
+                <img src="imges/Ellipse 76.svg" alt="">
+            </div>
+            <div class="flex gap-2.5 mt-[2%] justify-end mb-14">
+                <div class="border border-[#25A0D5] rounded-2xl p-[1%] flex">
+                    <h3>
+                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،                    </h3>
+                    <img class="w-[53px] md:w-[82px] xl:w-[149px]" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
+                </div>
+                <img src="imges/Ellipse 76.svg" alt="">
+            </div>
+            <div>
+                <form>
+                    <hr class="border-t border-t-[#D2D2D2] w-full">
+                    <label for="chat" class="sr-only">Your message</label>
+                    <div class="flex items-center  py-2 rounded-lg ">
+                        <textarea id="chat" rows="1" class="block h-[44px] mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your message..."></textarea>
+                        <button type="button" class="inline-flex justify-center p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+                            <svg class="w-5 h-5" aria-hidden="true" width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="36" height="36" rx="6" fill="#EBEBEB"/>
+                                <path d="M28.125 25.875V10.125C28.125 8.8875 27.1125 7.875 25.875 7.875H10.125C8.8875 7.875 7.875 8.8875 7.875 10.125V25.875C7.875 27.1125 8.8875 28.125 10.125 28.125H25.875C27.1125 28.125 28.125 27.1125 28.125 25.875ZM14.0625 19.6875L16.875 23.0738L20.8125 18L25.875 24.75H10.125L14.0625 19.6875Z" fill="#5C5C5C"/>
+                            </svg>
+                            <span class="sr-only">Upload image</span>
+                        </button>
+                        <button type="submit" class="inline-flex justify-center p-2 text-blue-600 rounded-full cursor-pointer hover:bg-blue-100 dark:text-blue-500 dark:hover:bg-gray-600">
+                            <svg class="w-5 h-5 " width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_1150_14513)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M22 0C34.1503 0 44 9.84973 44 22C44 34.1503 34.1503 44 22 44C9.84973 44 0 34.1503 0 22C0 9.84973 9.84973 0 22 0ZM29.3507 31.244L35.8789 12.756L8.12109 18.1149L15.1987 21.957L35.8789 12.756L20.8217 25.2679L29.3507 31.244ZM19.0997 24.7041L35.6211 12.913L15.9748 23.2461L16.8224 30.0508L18.8639 25.0149C18.9136 24.892 18.9949 24.7846 19.0997 24.7035V24.7041ZM18.2182 30.597L22.0376 27.9497L19.8977 26.4506L18.2182 30.597Z" fill="url(#paint0_linear_1150_14513)"/>
+                                </g>
+                                <defs>
+                                <linearGradient id="paint0_linear_1150_14513" x1="22" y1="0" x2="22" y2="44" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#29BCEE"/>
+                                <stop offset="1" stop-color="#6081C2"/>
+                                </linearGradient>
+                                <clipPath id="clip0_1150_14513">
+                                <rect width="44" height="44" fill="white"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                            <span class="sr-only">Send message</span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!--نهاية المربع الثاني-->
+
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
+        <!-- <div class="flex flex-col flex-auto h-full p-6">
+        <div
+          class="flex flex-col flex-auto flex-shrink-0 rounded-2xl bg-gray-100 h-full p-4"
+        >
+          <div class="flex flex-col h-full overflow-x-auto mb-4">
+            <div class="flex flex-col h-full">
+              <div class="grid grid-cols-12 gap-y-2">
+                <div class="col-start-1 col-end-8 p-3 rounded-lg">
+                  <div class="flex flex-row items-center">
+                    <div class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
+                    A
+                    </div>
+                    <div class="relative ml-5 text-sm bg-white py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>Hey How are you today?</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-1 col-end-8 p-3 rounded-lg">
+                  <div class="flex flex-row items-center">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vel ipsa commodi illum saepe numquam maxime
+                        asperiores voluptate sit, minima perspiciatis.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-6 col-end-13 p-3 rounded-lg">
+                  <div class="flex items-center justify-start flex-row-reverse">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative mr-3 text-sm bg-indigo-100 py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>I'm ok what about you?</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-6 col-end-13 p-3 rounded-lg">
+                  <div class="flex items-center justify-start flex-row-reverse">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative mr-3 text-sm bg-indigo-100 py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing. ?
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-1 col-end-8 p-3 rounded-lg">
+                  <div class="flex flex-row items-center">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>Lorem ipsum dolor sit amet !</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-6 col-end-13 p-3 rounded-lg">
+                  <div class="flex items-center justify-start flex-row-reverse">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative mr-3 text-sm bg-indigo-100 py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing. ?
+                      </div>
+                      <div
+                        class="absolute text-xs bottom-0 right-0 -mb-5 mr-2 text-gray-500"
+                      >
+                        Seen
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-1 col-end-8 p-3 rounded-lg">
+                  <div class="flex flex-row items-center">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl"
+                    >
+                      <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis, in.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-start-1 col-end-8 p-3 rounded-lg">
+                  <div class="flex flex-row items-center">
+                    <div
+                      class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
+                    >
+                      A
+                    </div>
+                    <div
+                      class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl"
+                    >
+                      <div class="flex flex-row items-center">
+                        <button
+                          class="flex items-center justify-center bg-indigo-600 hover:bg-indigo-800 rounded-full h-8 w-10"
+                        >
+                          <svg
+                            class="w-6 h-6 text-white"
+                            fill="none"
+                            stroke="currentColor"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="1.5"
+                              d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
+                            ></path>
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="1.5"
+                              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                            ></path>
+                          </svg>
+                        </button>
+                        <div class="flex flex-row items-center space-x-px ml-4">
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-4 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-10 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-10 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-12 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-10 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-6 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-5 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-4 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-3 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-10 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-10 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-1 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-1 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-8 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-2 w-1 bg-gray-500 rounded-lg"></div>
+                          <div class="h-4 w-1 bg-gray-500 rounded-lg"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex flex-row items-center h-16 rounded-xl bg-white w-full px-4"
+          >
+            <div>
+              <button
+                class="flex items-center justify-center text-gray-400 hover:text-gray-600"
+              >
+                <svg
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <div class="flex-grow ml-4">
+              <div class="relative w-full">
+                <input
+                  type="text"
+                  class="flex w-full border rounded-xl focus:outline-none focus:border-indigo-300 pl-4 h-10"
+                />
+                <button
+                  class="absolute flex items-center justify-center h-full w-12 right-0 top-0 text-gray-400 hover:text-gray-600"
+                >
+                  <svg
+                    class="w-6 h-6"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div class="ml-4">
+              <button
+                class="flex items-center justify-center bg-indigo-500 hover:bg-indigo-600 rounded-xl text-white px-4 py-1 flex-shrink-0"
+              >
+                <span>Send</span>
+                <span class="ml-2">
+                  <svg
+                    class="w-4 h-4 transform rotate-45 -mt-px"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"
+                    ></path>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
