--- a/Notifications.html
+++ b/Notifications.html
@@ -317,27 +317,22 @@
         </div>
     </nav>
 </header>
-<main class=" w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
+<main class="w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
     <section>
-        <div class="mt-[101px] md:mt-[131px] xl:mt-[155px] mb-5 md:mb-8  mr-[2.5%]">
-        <h2 class=" text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الإشتراكات</h2>
+        <div class="mt-[101px] md:mt-[131px] xl:mt-[155px] mb-3.5  mr-[2.5%]">
+        <h2 class="text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الاشعارات</h2>
     </div>
-    <div class="border w-[35%] mr-[2.5%]">
-    <div class="flex justify-between w-full p-[2%]">
-        <div class="flex gap-3">
-        <!--search bar -->
-        <div class="">
-            <div class=" flex items-center text-gray-400 focus-within:text-cyan-400">
-                <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class=" w-[311px] h-[30px] pl-14 pr-4 py-2.5  rounded-lg text-sm text-gray-600 outline-none border border-gray-300 focus:border-cyan-300  bg-neutral-100	">
-            </div>
-        </div>
-            <button type="submit" class="rounded-lg	focus:bg-gray-100 active:bg-gray-200 text-white lg:flex w-[30px] h-[30px] justify-center items-center rounded-lg bg-[#25A0D5]">
-                <svg class="fill-current w-[22px] h-[22px]" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
-                    <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
-                </svg>
-            </button>
-        </div>
-        <!--/search bar -->
+
+<div class="border md:max-w-[35%] mr-[2.5%] flex justify-between p-[1%] ">
+    <div class="flex items-center text-gray-400 focus-within:text-cyan-400">
+        <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class="h-[30px] pl-14 pr-4 py-2.5 rounded-lg text-sm text-gray-600 outline-none border border-gray-300 focus:border-cyan-300 bg-neutral-100">
+    </div>
+    <div>
+        <button type="submit" class="rounded-lg	focus:bg-gray-100 active:bg-gray-200 text-white lg:flex w-[30px] h-[30px] justify-center items-center rounded-lg bg-[#25A0D5]">
+            <svg class="fill-current w-[22px] h-[22px]" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
+                <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+            </svg>
+        </button>
     </div>
 </div>
     </section>
