--- a/Notifications.html
+++ b/Notifications.html
@@ -322,6 +322,50 @@
         <div class="mt-[101px] md:mt-[131px] xl:mt-[155px] mb-3.5  mr-[2.5%]">
         <h2 class="text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الاشعارات</h2>
     </div>
+    </section>
+    <section class=" mx-[2.5%]">
+        <div class="flex gap-3 border py-2.5 px-4 justify-between">
+            <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class=" h-8 pl-14 pr-4 py-2.5 rounded-lg text-sm text-gray-600 outline-none border border-[#F5F5F5] focus:border-cyan-300 bg-neutral-100">
+            <button type="submit" class="flex rounded-lg focus:bg-gray-100 active:bg-gray-200 text-white lg:flex xs:w-[88px] sm:w-[30px] h-[30px] justify-center items-center rounded-lg bg-[#25A0D5]">
+                <svg class="fill-current w-[22px] h-[22px]" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
+                    <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+                </svg>
+            </button>
+        </div>
+        <div class="text-[#25A0D5] text-sm flex justify-between bg-[#F5F5F5] py-2.5 px-4">
+            <h5> <span class="relative ">(3)
+                <div
+                class="absolute bottom-auto left-auto right-0 top-1 z-10 inline-block
+                -translate-y-1/2 translate-x-2/4 rotate-0 skew-x-0 skew-y-0 scale-x-100
+                scale-y-100 rounded-full bg-[#DE0F0F] p-1.5 xl:p-2 text-xs"></div>
+                </span> غير مقروء </h5>
+            <h5>الكل <span>(15)</span></h5>
+        </div>
+
+        <div class="flex border py-[1%] px-[2.5%] gap-5">
+
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+                </svg>
+                <img class="w-[77px] sm:w-[77px] " height="60" width="77" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
+
+        <div>
+        <div class="flex justify-end gap-3 mt-3">
+            <h5 class="text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+        </div>
+                <p class="text-xs sm:text-xl mt-[-14px] sm:mt-[-30px]">إشعار تحديث</p>
+                <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                    يستبدل في نفس المساحة النصوص في نفس المساحة..
+                </h3>
+            </div>
+            <!-- <div>
+                <h5 class="text-[#999999] text-xs sm:text-base">8/11/2023</h5>
+                <h3 class="w-auto bg-green-200 text-center mt-16 rounded-lg text-[10px]">جارية</h3>
+            </div> -->
+        </div>
+    </section>
+
+
 
 <div class="border md:max-w-[35%] mr-[2.5%] flex justify-between p-[1%] ">
     <div class="flex items-center text-gray-400 focus-within:text-cyan-400">
@@ -335,7 +379,6 @@
         </button>
     </div>
 </div>
-    </section>
 
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
