finished the page

--- a/support_chat.html
+++ b/support_chat.html
@@ -360,9 +360,9 @@
             <div>
                 <form>
                     <hr class="border-t border-t-[#D2D2D2] w-full">
-                    <label for="chat" class="sr-only">Your message</label>
+                    <label for="chat" class="sr-only">اكتب رد..</label>
                     <div class="flex items-center  py-2 rounded-lg ">
-                        <textarea id="chat" rows="1" class="block h-[44px] mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your message..."></textarea>
+                        <textarea id="chat" rows="1" class="block h-[44px] mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="اكتب رد.."></textarea>
                         <button type="button" class="inline-flex justify-center p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
                             <svg class="w-5 h-5" aria-hidden="true" width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="36" height="36" rx="6" fill="#EBEBEB"/>
